# gnome-app-store-gnome-shell-extension

./: ChangeLog  extension.js  metadata.json  stylesheet.css
doc/: app-store-on-gnome-shell.odp
libgnome-app-store-0.1/: AUTHORS  Makefile  Makefile.am  Makefile.in  README  configure.ac  run
libgnome-app-store-0.1/libgnome-app-store/: Makefile  Makefile.am  Makefile.in  app_demo.c  gnome-app-config.c  gnome-app-stage.c  gnome-app-store-0.1.pc  gnome-app-store.c  gnome-app-store.h  gnome-desktop-3.0-uninstalled.pc.in  libgnome-app-store.c  libgnome-app-store.h  local-app.c  local-app.h  test_scrolling.c
libgnome-app-store-0.1/po/: Makefile.in  POTFILES.in
libgnome-app-store-0.1/src/: Makefile.am  app_demo.c  gnome-app-config.c  gnome-app-config.h  gnome-app-install.c  gnome-app-install.h  gnome-app-item.c  gnome-app-item.h  gnome-app-server.c  gnome-app-server.h  gnome-app-stage.h  gnome-app-store-0.1.pc.in  gnome-app-store.c  gnome-app-store.conf  gnome-app-store.h  local-app.c  local-app.h  test_scrolling.c
libgnome-app-store-0.1/test-data/: appdata.xml
libgnome-app-store-0.1/test-data/icons/: blender.xpm  bovo.svgz  kerry.svgz
